test-cases/negative/test_049_invalid_loop_variable.lay
# negative test: invalid loop variable usage
# expected: error should be thrown

for each in list do
  print 'missing variable name'


